[package]
name = "clat"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "clat"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
toml = "0.8"
dirs = "5"
colored = "2"
anyhow = "1"
whoami = "1"
